--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,869 +1,9 @@
-/*
-* Resets
-*/
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    text-shadow: none;
-    font-family: 'Open Sans', sans-serif;
-}
-
-html {
-    overflow-x: hidden;
-}
-
 body {
-    overflow: hidden;
+    background-color: gainsboro;
 }
 
-a:hover {
-    text-decoration: none;
-}
-
-/* BOTÃ•ES */
-.btn {
-    padding: 9px 3em;
-    font-size: 16px;
-    font-weight: 700;
-    text-transform: uppercase;
-    letter-spacing: 0.96px;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-    transition: background .3s, transform .5s;
-    font-family: 'Dosis', sans-serif;
-}
-
-.btn:hover {
-    transform: scale(1.04);
-}
-
-.btn-dark {
-    background-image: linear-gradient(180deg, #BE0033 0%, #DB0000 100%);
-    color: #fff;
-}
-
-.btn-light {
-    background-color: #fff;
-    color: #A80303;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.23);
-}
-
-.btn-hight {
-    color: #E20909;
-    border: 1px solid #E20909;
-}
-
-.btn-white {
-    background-color: #fff;
-    color: #A80303;
-    box-shadow: 0 -2px 20px rgba(0, 0, 0, 0.23);
-}
-
-.btn-footer {
-    box-shadow: 0 -2px 20px rgba(0, 0, 0, 0.23);
-}
-
-.btn-white:hover,
-.btn-light:hover {
-    color: #A80303;
-}
-
-.btn-dark:hover {
-    color: #fff
-}
-
-.btn-hight:hover {
-    color: #E20909;
-}
-
-/* NAVBAR */
-.navbar-header {
-    padding-left: 20px;
-}
-
-.navbar-logo {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    z-index: 10;
-    top: 50px;
-}
-
-.navbar-logo a {
-    font-size: 35px;
-    color: #fff;
-}
-
-.icons-social {
-    float: right;
-    padding-left: 48px;
-    padding-top: 5px;
-    padding-right: 36px;
-    margin-top: 10px;
-}
-
-.icons-social a {
-    color: rgba(97, 95, 95, 1);
-    font-size: 30px;
-}
-
-.icons-social__item1 {
-    padding-right: 20px;
-}
-
-.logo__button {
-    padding: 0 15px !important;
-}
-
-/* BANNER */
-#intro {
-    position: relative;
-}
-
-.banner__images, .banner__images img {
-    width: 100%;
-}
-
-.banner__content-text {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-.banner__content-text  h1{
-    color: #fff;
-    font-family: 'Rubik', sans-serif;
-    font-size: 68px;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-.banner__content-text  h2{
-    color: #A80303;
-    font-size: 78px;
-    font-family: 'Lobster', cursive;
-}
-.banner__content-text a{
-    margin-top: 8%;
-}
-.scroll {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
-    color: #fff;
-    padding: 10px;
-}
-
-.scroll p {
-    font-size: 12px;
-    font-weight: bold;
-    letter-spacing: 2.4px;
-    text-transform: uppercase;
-    padding-bottom: 17px;
-}
-
-/* SUÃTES DESTAQUE */
-#destaque {
-    background-color: #ffff;
-}
-
-.destaque__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 21px 0 18px;
-}
-
-.destaque__title {
-    width: 260px;
-    color: #D10000;
-    font-weight: 900;
-    font-size: 38px;
-    border-bottom: 1px solid #E5A0A0;
-    padding-bottom: 10px;
-}
-
-.descrip__title {
-    color: #6E6E6E;
-    font-size: 16px;
-    font-weight: bold;
-font-family: 'Dosis', sans-serif;
-    padding-top: 17px;
-}
-
-.descrip__title span {
-    color: #A8A8A8;
-    text-transform: uppercase;
-font-family: 'Dosis', sans-serif;
-    font-weight: 900;
-}
-
-.outras_suites__flickity {
-    background-image: linear-gradient(180deg, #CB1919 0%, #710030 100%);
-    padding-top: 17px;
-}
-
-.outras__suites {
-    width: 435px;
-    margin-left: 24px;
-}
-
-.outras__suites-image {
-    background-repeat: no-repeat !important;
-    background-size: cover !important;
-    background-position: center !important;
-    height: 283px;
-}
-
-.outras__suites-bottom {
-    background-image: linear-gradient(180deg, #BE0033 0%, #DB0000 100%);
-    border-top: 4px solid #FFFFFF;
-    margin-bottom: 30px;
-    padding: 12px 0 21px;
-}
-
-.outras__suites-bottom h2 {
-    font-family: 'Dosis', sans-serif;
-    font-size: 26px;
-    font-weight: 600;
-    color: #fff;
-    margin-top: 10px;
-}
-
-.outras__suites-bottom p {
-    font-family: 'Dosis', sans-serif;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 2.8px;
-    text-transform: uppercase;
-    margin-bottom: 18px;
-}
-
-.flickity-slider {
-    z-index: 1;
-}
-
-.destaque__btn {
-    background-color: #fff;
-    position: relative;
-    margin-top: -3%;
-    padding: 60px 0 80px;
-    text-align: center;
-}
-
-/* MOTEL */
-#motel {
-    background-color: rgba(232, 232, 232, 1);
-}
-
-.motel__content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.motel__fachada {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    z-index: 1;
-    margin-top: -2%;
-}
-
-.motel__text h2 {
-    width: 196px;
-    color: #7B0000;
-    font-size: 38px;
-    font-weight: 900;
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #E20909;
-}
-
-.motel__text {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.motel__text p {
-    width: 340px;
-    color: #404040;
-    font-weight: 700;
-    font-size: 16px;
-    padding-top: 10px;
-}
-.motel__text p span{
-    color: #A80303;
-}
-.motel__btn {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: 10px;
-}
-
-.motel__text a {
-    width: 248px;
-    display: block;
-    margin-top: 18px;
-}
-
-.motel .motel__text {
-    padding-top: 15px;
-}
-/* PROMOS */
-#promo{
-    padding: 77px 0 51px;
-}
-#promo .row{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-.promo__text{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.promo__text .destaque__title{
-    text-align: center;
-}
-.promo__text p{
-    width: 216px;
-    color: #000000;
-    font-size: 16px;
-    font-weight: 600;
-}
-.promo__image img{
-    width: 100%;
-}
-/* LOCALIZAÃ‡ÃƒO */
-.localizacao {
-    margin-bottom: 28px;
-}
-
-.localizacao__mapa img {
-    width: 100%;
-}
-
-.localizacao__text {
-    background-image: linear-gradient(180deg, #CB1919 0%, #710030 100%);
-    color: #fff;
-    padding: 50px 0 0;
-}
-
-.localizacao__adress {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.localizacao__adress h2 {
-    font-size: 38px;
-    font-weight: 700;
-    margin: 0;
-    padding-bottom: 10px;
-    border-bottom: 1px solid #FFFFFF;
-    font-family: 'Dosis', sans-serif;
-}
-
-.localizacao__adress p {
-    font-size: 16px;
-    font-weight: bold;
-    padding: 7px 0 10px;
-}
-
-.localizacao__btn {
-    text-align: center;
-    transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-}
-
-/* FOOTER */
-.footer-desktop {
-    background-color: #7A0000;
-    color: #fff;
-}
-.redes-sociais {
-    padding: 20px 0 15px;
-    background-color: #000;
-}
-
-.redes-sociais .container {
-    padding: 0;
-}
-
-.redes-sociais a:nth-child(2) {
-    margin-right: 5%;
-}
-
-.redes-sociais a {
-    display: inline-flex;
-    align-items: center;
-    padding-right: 84px;
-    color: #fff;
-}
-.redes-sociais a span{
-    font-family: 'Roboto Condensed', sans-serif;
-    text-transform: uppercase;
-    font-size: 10px;
-    letter-spacing: 3px;
-}
-.redes-sociais a:last-of-type {
-    padding-right: 0;
-}
-
-.redes-sociais i {
-    padding-right: 10px;
-    font-size: 21px;
-}
-
-.footer-logo {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: -2%;
-}
-
-.footer__bottom {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 0 37px;
-}
-
-.nav-footer {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 35px;
-}
-
-.nav-footer li {
-    width: 50%;
-    margin-bottom: 20px;
-    text-transform: uppercase;
-    transition: transform .3s;
-    -webkit-transition: transform .3s;
-    -moz-transition: transform .3s;
-    -ms-transition: transform .3s;
-    -o-transition: transform .3s;
-}
-
-.nav-footer li:hover {
-    transform: scale(1.04);
-    -webkit-transform: scale(1.04);
-    -moz-transform: scale(1.04);
-    -ms-transform: scale(1.04);
-    -o-transform: scale(1.04);
-}
-
-.nav-footer li a {
-    color: #fff;
-    font-size: 14px;
-    font-weight: 700;
-    text-decoration: none;
-    font-family: 'Dosis', sans-serif;
-    letter-spacing: 4.2px;
-}
-
-.footer-desktop h4 {
-    margin: 0;
-    font-size: 8px;
-    text-transform: uppercase;
-    font-family: 'Dosis', sans-serif;
-}
-
-.telefone p {
-    font-size: 18px;
-    color: #fff;
-    font-weight: 700;
-    padding-bottom: 10px;
-    letter-spacing: 1.44px;
-}
-
-.email p {
-    font-size: 16px;
-    font-weight: bold;
-}
-
-.assinatura {
-    background-color: #000;
-    padding: 27px 0;
-}
-
-.assinatura p {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 12px !important;
-    font-weight: 600;
-    color: #fff;
-    margin-bottom: 0;
-}
-
-.assinatura a {
-    display: inline !important;
-    font-family: 'Titillium Web', sans-serif;
-    color: #fff;
-}
-
-/* TOPO */
-.topo {
-    background-image: url("../images/topo-intern.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    color: #fff;
-    padding: 10% 15px;
-}
-
-.topo h2 {
-    font-size: 36px;
-    font-weight: 600;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-.topo p {
-    font-weight: bold;
-    font-size: 16px;
-}
-
-/* SUITES INTERNAS */
-#suites {
-    padding: 60px 0;
-}
-
-#suites .suites__intern {
-    width: 100%;
-    margin-left: 0;
-}
-
-#suite-interna {
-    margin-top: 30px;
-}
-
-.interna__flickity {
-    padding-bottom: 30px;
-    overflow: hidden;
-}
-
-.interna__container {
-    width: 100%;
-}
-
-.interna__container img {
-    width: 100%;
-}
-
-.interna__info {
-    background-image: linear-gradient(180deg, #CB1919 0%, #710030 100%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #fff;
-    padding: 2.3% 4.1%;
-    font-size: 1.14em;
-    margin: 3% 0;
-}
-
-.interna_title--big {
-    letter-spacing: .3em;
-    font-size: 14px;
-}
-
-.interna_text--big {
-    font-size: 14px;
-}
-
-.interna_title--small {
-    font-size: 14px !important;
-    letter-spacing: .2em;
-    color: #fff !important;
-    margin-top: 0;
-    padding-top: 0;
-    text-transform: uppercase;
-}
-
-.interna_text--small {
-    font-size: 14px !important;
-    margin-top: .7em;
-}
-
-.interna__all-info {
-    width: 53%;
-}
-
-#suite-interna .flickity-page-dots {
-    z-index: 1;
-}
-
-.interna__itens {
-    background-image: linear-gradient(180deg, #CB1919 0%, #710030 100%);
-    margin-top: 15px;
-    padding: 27px 28px;
-    color: #fff;
-}
-
-#outras {
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-#outras .description {
-    margin: 0;
-    font-size: 16px;
-}
-
-.outras__topo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px 0;
-}
-
-.outras__suites {
-    transition: transform .3s;
-}
-
-.outras__suites:hover {
-    transform: scale(1.03);
-}
-
-.flickity-button:disabled {
-    opacity: 0;
-}
-
-.outras__flickity .destaque__suites--text {
-    width: 677px;
-}
-
-.outras__topo p {
-    color: #6E6E6E;
-    font-size: 14px !important;
-    font-weight: bold;
-font-family: 'Dosis', sans-serif;
-    padding-top: 17px;
-}
-
-.outras__topo p span {
-    color: #A8A8A8;
-    text-transform: uppercase;
-font-family: 'Dosis', sans-serif;
-    font-weight: 900;
-    font-size: 14px;
-}
-.description-title span{
-    font-size: 18px;
-}
-/* MOTEL */
-.motel {
-    margin-top: 30px;
-}
-
-.motel .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 4%;
-}
-
-.motel .motel__text {
-    width: 50%;
-    padding-top: 15px;
-}
-
-.center-btn-mb {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.motel .motel__text a {
-    margin-top: 15px;
-}
-
-/* LOCALIZAÃ‡ÃƒO */
-.localizacao--flex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px 0;
-}
-
-.localizacao--flex p {
-    font-size: 16px;
-    margin-bottom: 0;
-}
-
-.localizacao--flex a {
-    margin-left: 30px;
-}
-
-/* CONTATO */
-#contato {
-    margin-top: 30px;
-}
-
-.contact__box {
-    width: 62%;
-    padding: 3% 5.5%;
-    margin: 0 auto 6%;
-    box-shadow: 0 13px 20px rgba(0, 0, 0, 0.26);
-}
-
-.contact__text {
-    padding-bottom: 20px;
-}
-
-.contact__form {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.contact__inputs {
-    width: 49%;
-}
-
-.contact__btn {
-    width: 100%;
-}
-
-.contact__inputs .form-control {
-    border-radius: 0;
-}
-
-.contact__inputs textarea {
-    min-height: 129px;
-    max-height: 129px;
-    max-width: 100%;
-    min-width: 100%;
-}
-
-/* PROMOCÃ•ES */
-#cortesias {
-    margin-top: 11px;
-}
-
-.promo__cortesia-box,
-.descontos__box {
-    background-image: linear-gradient(180deg, #BE0033 0%, #DB0000 100%);
-    color: #fff;
-    margin-top: 19px;
-    padding: 31px 41px;
-}
-.descontos__box{
-    padding: 0;
-}
-.descontos__box img{
-    width: 100%;
-}
-.descontos .row{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.descontos {
-    margin-bottom: 4%;
-    padding-top: 19px;
-}
-
-.descontos .container {
-    border-top: 1px solid #808080;
-}
-
-/* CUPOM DE USUARIO */
-.cupom-discount {
-    text-align: center;
-}
-
-.descount-adicionado {
-    margin-bottom: 30px;
-}
-
-.form-upgrade {
-    padding: 30px 0;
-}
-.btn-whats {
-    background-color: #29CC46;
-    border-radius: 50px;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
-    display: inline-flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    padding: 20px 35px;
-    position: fixed;
-    right: 5%;
-    bottom: 5%;
-    z-index: 9999;
-    transition: background .3s, transform .5s;
-}
-
-.btn-whats:hover {
-    transform: scale(1.04);
-}
-.btn-whats svg {
-    width: 50px;
-    margin-right: 25px;
-}
-.btn-whats p {
-    margin: 0;
-    font-size: 20px;
-    font-weight: 600;
-    letter-spacing: 4.8px;
-    color: #E6E6E6;
-    text-transform: uppercase;
-    line-height: .9em;
-}
-.btn-whats p span{
-    font-size: 12px;
-    letter-spacing: 3.92px;
-    font-weight: 400;
-}
-@media only screen and (max-width: 768px){
-.btn-whats {
-    background-color: transparent;
-    box-shadow: none;
-    right: 1%;
-    bottom: 10%;
-    padding: 0;
-}
-    .btn-whats p {
-    display: none;
-}
-.title{
-    line-height: 1em;
-    font-size: 70px;
-}
+main {
+    max-width: 1440px;
+    padding: 40px 5%;
+    margin: auto;
 }
